# bankfusion

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bankfusion/: hooks.py  modules.txt
